# py-ts-interfaces

./: CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  run_tests.sh  setup.cfg
.github/workflows/: pythonpackage.yml
py_ts_interfaces/: cli.py  parser.py
py_ts_interfaces/tests/: tests.py
python_to_typescript_interfaces/: cli.py  parser.py
python_to_typescript_interfaces/tests/: tests.py
