[tool.poetry]
name = 'py-ts-interfaces'
version = '0.5.0'
description = 'A library that converts Python dataclasses with type annotations to a TypeScript interface and serializes them to a file.'
license = 'MIT'
authors = [
    'Christopher Cordero <ccordero@protonmail.com>'
]
readme = 'README.md'
repository = 'https://github.com/cs-cordero/py-ts-interfaces'
homepage = 'https://github.com/cs-cordero/py-ts-interfaces'
documentation = 'https://github.com/cs-cordero/py-ts-interfaces'
keywords = ['python', 'typescript', 'interfaces']
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = '^3.8.1'
astroid = "3.2.1"

[tool.poetry.dev-dependencies]
black = '24.4.2'
flake8 = '7.0.0'
mypy = '1.10.0'
pytest-cov = '5.0.0'
pytest = "8.2.2"
isort = [
    { version = "5.12.0", python = ">=3.8" }
]
nox = "2022.1.7"
nox-poetry = "1.0.1"
typed-ast = { version = "1.5.4", python = "<3.8" }

[tool.poetry.scripts]
py-ts-interfaces = "py_ts_interfaces.cli:main"
